<resources>
    <string name="app_name">SpinnerAssignment</string>
    <string name="screenName">Survey</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="qualification">Qualification</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string-array name="ageArray">
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
    </string-array>

</resources>
